--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.24.0)
-project(XXTEMPLATEXX)
+project(Waves)
 
 # Language specs
 set(CMAKE_CXX_STANDARD 20)
@@ -12,11 +12,11 @@ set(CMAKE_CXX_FLAGS "-fconcepts")
 # List source files and define target
 file(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*)
 list(REMOVE_ITEM SRCS ${PROJECT_SOURCE_DIR}/src/main.cpp)
-add_executable(XXTEMPLATEXX ${PROJECT_SOURCE_DIR}/src/main.cpp ${SRCS})
+add_executable(Waves ${PROJECT_SOURCE_DIR}/src/main.cpp ${SRCS})
 
 # Define dependencies
 ## Google Logging Library
-target_link_libraries(XXTEMPLATEXX glog)
+target_link_libraries(Waves glog)
 
 # If Catch2 is installed prepare the `Test` target
 find_package(Catch2 3 CONFIG)
